--- a/src/index.scss
+++ b/src/index.scss
@@ -208,7 +208,7 @@ code {
 }
 
 @media (prefers-color-scheme: light) {
-  code {
+  code, .package-list--item {
     background-color: #f9f9f9;
   }
 }
